# jobnimbus-estimate

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Justfile  README.md  keilyn.md  pyproject.toml
.github/workflows/: ci.yml
backend/: calibrate.py  config.py  main.py  run_test.py  test_pipeline.py
backend/evals/: benchmarks.py  dashboard.py  runner.py
backend/models/: schemas.py
backend/pipeline/: estimate.py  gis.py  measurements.py  orchestrator.py  pdf_report.py  solar.py  sunroof_scraper.py  vision.py
backend/scraper/: package-lock.json  package.json
backend/scraper/src/: browser.ts  index.ts
backend/scraper/src/scrapers/: streetview.ts
backend/templates/: report.html
docs/hackathon/: README.md  SUBMISSION.md  benchmark-measurements.md
frontend/: .oxlintrc.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/app/components/: UploadInput.tsx
frontend/lib/: api.ts
scraper/src/scrapers/: satellite.ts  streetview.ts  sunroof.ts
scraper/src/utils/: geocode.ts
